fix: star align

--- a/app/globals.css
+++ b/app/globals.css
@@ -102,7 +102,7 @@ body {
   bottom: 0;
   left: 0;
   right: 1%;
-  height: 0.55em;
+  height: 0.79rem;
   border-top: 2px solid #4a4a4a;
   z-index: -1;
 }
